--- a/src/app/components/transaction/transaction-form/transaction-form.component.html
+++ b/src/app/components/transaction/transaction-form/transaction-form.component.html
@@ -33,7 +33,7 @@
   <section class="flex gap-4">
     <p-button
       type="submit"
-      icon="pi pi-plus"
+      icon="pi pi-check"
       severity="success"
       [rounded]="true"
       [outlined]="true"
