--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,20 @@
 <div class="card">
   <p-table
+    [paginator]="true"
+    stateStorage="local"
+    stateKey="tab-state"
+    [rows]="5"
+    [rowsPerPageOptions]="[5, 10, 20]"
+    [scrollable]="true"
+    scrollHeight="50dvh"
     [value]="transactions()"
     [tableStyle]="{ 'min-width': '50rem' }"
-    styleClass="p-datatable-gridlines p-datatable-striped"
+    styleClass="p-datatable-striped"
     responsiveLayout="stack"
     [breakpoint]="'960px'"
+    dataKey="id"
+    [globalFilterFields]="['category.type', 'category.name']"
+    sortMode="multiple"
   >
     <ng-template pTemplate="caption">
       <p-button
@@ -17,27 +27,96 @@
     <ng-template pTemplate="header">
       <tr>
         <th>Name</th>
-        <th>Amount</th>
+        <th pSortableColumn="amount">
+          Amount
+          <p-sortIcon field="amount" />
+        </th>
         <th>Type</th>
         <th>Category</th>
-        <th>Date</th>
+        <th pSortableColumn="date">
+          Date
+          <p-sortIcon field="date" />
+        </th>
+      </tr>
+      <tr>
+        <th></th>
+        <th></th>
+        <th>
+          <p-columnFilter
+            field="category.type"
+            matchMode="equals"
+            [showMenu]="false"
+          >
+            <ng-template
+              pTemplate="filter"
+              let-value
+              let-filter="filterCallback"
+            >
+              <p-dropdown
+                appendTo="body"
+                [options]="typeFilter"
+                (onChange)="filter($event.value)"
+                [ngModel]="value"
+              >
+              </p-dropdown>
+            </ng-template>
+          </p-columnFilter>
+        </th>
+        <th>
+          <p-columnFilter
+            field="category.name"
+            matchMode="equals"
+            [showMenu]="false"
+          >
+            <ng-template
+              pTemplate="filter"
+              let-value
+              let-filter="filterCallback"
+            >
+              <p-autoComplete
+                [suggestions]="filtered()"
+                optionLabel="name"
+                optionValue="category"
+                (completeMethod)="search($event)"
+                (onSelect)="filter($event.value.name)"
+                (onClear)="filter()"
+                [ngModel]="value"
+                appendTo="body"
+              />
+            </ng-template>
+          </p-columnFilter>
+        </th>
+        <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-product>
+    <ng-template pTemplate="body" let-transaction>
       <tr>
-        <td>{{ product.name }}</td>
-        <td>{{ product.amount | currency }}</td>
+        <td>{{ transaction.name }}</td>
+        <td>{{ transaction.amount | currency }}</td>
         <td
           [style]="
-            product.category.type === categoryType.Expense
+            transaction.category.type === categoryType.Expense
               ? 'color: var(--red-500)'
               : 'color: var(--green-500)'
           "
         >
-          {{ product.category.type }}
+          {{ transaction.category.type }}
         </td>
-        <td>{{ product.category.name }}</td>
-        <td>{{ product.date | date }}</td>
+        <td>{{ transaction.category.name }}</td>
+        <td>{{ transaction.date | date }}</td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="footer">
+      <tr>
+        <td></td>
+        <td colspan="4">Total Income: {{ totalIncome() | currency }}</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>Total Expense: {{ totalExpense() | currency }}</td>
+        <td colspan="3" class="text-right">
+          Balance: {{ balance() | currency }}
+        </td>
       </tr>
     </ng-template>
   </p-table>
