--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
         icon="pi pi-plus"
         [rounded]="true"
         severity="success"
-        (onClick)="addTransition()"
+        (onClick)="addTransaction()"
       />
     </ng-template>
     <ng-template pTemplate="header">
