storage fix, bundle optimization

--- a/src/app/components/transaction/category-form/category-form.component.html
+++ b/src/app/components/transaction/category-form/category-form.component.html
@@ -6,7 +6,7 @@
   <p-floatLabel>
     <p-dropdown [options]="categoryType()" appendTo="body" />
   </p-floatLabel>
-  <section class="flex gap-4">
+  <section class="action">
     <p-button
       type="submit"
       icon="pi pi-check"
