--- a/src/app/components/transaction/category-form/category-form.component.css
+++ b/src/app/components/transaction/category-form/category-form.component.css
@@ -1,6 +1,10 @@
 .category-form {
-    margin-top: 20px;
-    display: grid;
-    grid-gap: 26px;
-  }
-  
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 26px;
+}
+
+.action {
+  display: flex;
+  gap: 24px;
+}
